--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.2.0",
+    "config": "^3.3.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.4",
     "morgan": "~1.9.1",
+    "request": "^2.88.2",
     "swagger-ui-express": "^4.4.0"
   }
 }
