--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.3.4",
     "morgan": "~1.9.1",
     "request": "^2.88.2",
+    "socket.io": "^4.5.1",
     "swagger-ui-express": "^4.4.0"
   }
 }
