Added Login code

--- a/front/package.json
+++ b/front/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch-sass": "node-sass -w src/App.scss src/App.css --output-style compressed"
   },
   "eslintConfig": {
     "extends": [
@@ -35,6 +36,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:4000",
   "browserslist": {
     "production": [
       ">0.2%",
